fix z-index of jobs:hover

--- a/app/styles/app/layouts/build-job.sass
+++ b/app/styles/app/layouts/build-job.sass
@@ -93,7 +93,7 @@
         position: absolute
         width: auto
         padding-right: 1em
-        z-index: 999
+        z-index: 88
     .job-duration
       width: grid-calc(8, 24)
       max-width: 165px
